--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div class="content">
         <h3>Looking for adventure?</h3>
         <p>You've come at the right place !</p>
+        <p>Connecting People through adventures, amongest nature.✌️</p>
         <a href="https://www.instagram.com/adventuresquad.in/" class="btn">discover more</a>
     </div>
 
