--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 <input type="text" placeholder="subject">
             </div>
             <textarea placeholder="message" name="" id="" cols="30" rows="10"></textarea>
-            <a href="mailto:sasaneamit4@gmail.com" class="btn">Send Message</a>
+            <a href="mailto:info.adventuresquad@gmail.com" class="btn">Send Message</a>
         </form>
 
     </div>
@@ -439,7 +439,7 @@
                 <i style="font-size:24px" class="fa">&#xf095;
                 <a href="tel:+91 8888817886">+91 8888817886 </a></i>  
                 <i style="font-size:24px" class="fa">&#xf0e0;
-                <a href = "mailto:sasaneamit4@gmail.com">sasaneamit4@gmail.com</a></i>
+                <a href = "mailto:info.adventuresquad@gmail.com">info.adventuresquad@gmail.com</a></i>
             
         </div>
         <div class="box">
@@ -464,7 +464,7 @@
                 <h1>Rates us on</h1>
 
                  <div class="home__social-icon">
-                 <a href="https://www.facebook.com/shubham.pitekar.1/"><i class="fab fa-facebook-f"> Facebook</i></a>
+                 <a href="https://www.facebook.com/Adventuresquad.in/"><i class="fab fa-facebook-f"> Facebook</i></a>
                  <a href="https://www.instagram.com/adventuresquad.in/"><i class="fab fa-instagram"> Instagram</i></a>
                  <a href="https://bit.ly/3g4IDvH"><i class="fab fa-whatsapp"></i> Whatsapp</a>
                  <a href="https://www.google.com/maps/place/Adventure+Squad/@19.8714017,75.3360805,15z/data=!4m5!3m4!1s0x0:0xf28fee3713dce0ac!8m2!3d19.8714009!4d75.3360705">
@@ -476,7 +476,7 @@
 
     </div>
 
-    <h1 class="credit"> created by <span><a href="https://www.instagram.com/adventuresquad.in/"></a>Shuence </span> | all rights reserved! </h1>
+    <h1 class="credit"> created by <span><a href="https://www.instagram.com/Shuence/">Shuence </a></span> | all rights reserved! </h1>
 
 </section>
 
