--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
     </div>
 
-    <h1 class="credit"> created by <span><a href="#">Pranali Chobe</a></span> | all rights reserved! </h1>
+    <h1 class="credit"> created by <span><a style="text-color:cyan" href="#">Pranali Chobe</a></span> | all rights reserved! </h1>
 
 </section>
 
