--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+ni
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -476,7 +477,7 @@
 
     </div>
 
-    <h1 class="credit"> created by <span><a style="text-color:cyan" href="https://www.linkedin.com/in/shuence">Shuence</a></span> | all rights reserved! </h1>
+    <h1 class="credit"> created by <span><a style="text-color:cyan" href="https://www.linkedin.com/company/QuartetStudioZ">QuartetStudioZ</a></span> | all rights reserved! </h1>
 
 </section>
 
